2002-01-15  Johan Dahlin  <jdahlin@telia.com>

	* bonobo/bonobo-canvas-component.h (BONOBO_TYPE_CANVAS_COMPONENT): Add

	* bonobo/bonobo-ui-config-widget.h (BONOBO_TYPE_UI_CONFIG_WIDGET): Add

	* bonobo/bonobo-selector-widget.h (BONOBO_TYPE_SELECTOR_WIDGET): Add

	* bonobo/bonobo-selector.h (BONOBO_TYPE_SELECTOR): Add

2002-01-15  Michael Meeks  <michael@ximian.com>

	* Version 1.109.2

2002-01-15  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-preferences.c
	(bonobo_ui_preferences_remove_engine): remove assert,
	we can double dispose.

	* bonobo/bonobo-ui-engine.c (impl_finalize): move loads
	of guff into
	(bonobo_ui_engine_dispose): here.
	(bonobo_ui_engine_update): tolerate a NULL tree.

	* bonobo/bonobo-window.c (bonobo_window_dispose): do an
	explicit dispose on the engine.

	* bonobo/bonobo-ui-engine.c (impl_dispose):
	freeze/thaw the engine, since we can get bogus 'updates'
	happening from re-enterancy as we release the tree.
	(bonobo_ui_engine_dispose): split from dispose.

2002-01-14  Anders Carlsson  <andersca@gnu.org>

	* bonobo/bonobo-ui-engine.c: (impl_dispose),
	(bonobo_ui_engine_construct):
	Add/remove engine from preferences list;
	
	* bonobo/bonobo-ui-preferences.c: (update_engines_idle_callback),
	(keys_changed_fn), (bonobo_ui_preferences_add_engine),
	(bonobo_ui_preferences_remove_engine),
	(bonobo_ui_preferences_get_toolbar_style):
	Add support for notification, remove unused functions.
	
	* bonobo/bonobo-ui-preferences.h:
	* bonobo/bonobo-ui-sync-menu.c: (impl_bonobo_ui_sync_menu_state),
	(impl_bonobo_ui_sync_menu_build):
	Always create image menu items, update image in sync_state.
	
	* bonobo/bonobo-ui-sync-toolbar.c: (parse_look), (create_dockitem):
	Use bonobo_ui_preferences_get_toolbar_style.
	* bonobo/bonobo-window.c: (construct_priv):
	* tests/test-ui.c: (dump_prefs):
	Remove unneeded calls.
	
2002-01-10  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-sync-menu.c (impl_dispose):
	destroy the hash table here.