@@ -1,10 +1,19 @@
+2002-01-16  Michael Meeks  <michael@ximian.com>
+
+	* bonobo/bonobo-ui-util.c (lookup_stock_compat):
+	implement a more compatible mapping for the old stock
+	names.
+
 2002-01-15  Johan Dahlin  <jdahlin@telia.com>
 
-	* bonobo/bonobo-canvas-component.h (BONOBO_TYPE_CANVAS_COMPONENT): Add
+	* bonobo/bonobo-canvas-component.h
+	(BONOBO_TYPE_CANVAS_COMPONENT): Add
 
-	* bonobo/bonobo-ui-config-widget.h (BONOBO_TYPE_UI_CONFIG_WIDGET): Add
+	* bonobo/bonobo-ui-config-widget.h
+	(BONOBO_TYPE_UI_CONFIG_WIDGET): Add
 
-	* bonobo/bonobo-selector-widget.h (BONOBO_TYPE_SELECTOR_WIDGET): Add
+	* bonobo/bonobo-selector-widget.h
+	(BONOBO_TYPE_SELECTOR_WIDGET): Add
 
 	* bonobo/bonobo-selector.h (BONOBO_TYPE_SELECTOR): Add
 
